--- a/ola mundo.html
+++ b/ola mundo.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>ola mundo</h1>
+    <main>
+        <section id="telefone">
+<iframe src="home.html" frameborder="0" name="tela" id="tela"></iframe>
+        </section>
+        <section id="redesociais">
+<a href="home.html" target="tela" > <img src="estilos/home.png" alt="" srcset=""></a><br>
+<a href="face.html" target="tela" > <img src="estilos/facebook logo.jpg" alt="" srcset="" class="A1"></a><br>
+<a href="insta.html" target="tela" > <img src="estilos/logo insta.jpg" alt="" srcset="" class="A1"></a><br>
+<a href="git.html" target="tela" > <img src="estilos/GitHub-Mark.png" alt="" srcset=""></a><br>
+<a href="youtube.html" target="tela" > <img src="estilos/youtube logo.png" alt="" srcset=""></a><br>
+        </section>
+    </main>
 </body>
 </html>
