--- a/git.html
+++ b/git.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="social.css">
 </head>
 <body>
-    <img src="estilos/pacote-d013 (1)/pacote-d013/imagens/tela-github.jpg" alt="" srcset="">
+    <img src="tela git junior.png" alt="" srcset="">
     <a href="https://github.com/"> A C E S S E </a>
 </body>
 </html>
