--- a/insta.html
+++ b/insta.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="social.css">
 </head>
 <body>
-    <img src="estilos/pacote-d013 (1)/pacote-d013/imagens/tela-instagram.jpg" alt="" srcset="">
+    <img src="foto de tela insta junior.png" alt="" srcset="">
     <a href="https://www.instagram.com/"> A C E S S E </a>
 </body>
 </html>
