tentativa de responsividade

--- a/ola mundo.html
+++ b/ola mundo.html
@@ -11,8 +11,10 @@
 <body>
     <main>
         <section id="telefone">
+            <div class="C1">
 <iframe src="home.html" frameborder="0" name="tela" id="tela"></iframe>
-        </section>
+           </div>
+        </section> 
         <section id="redesociais">
 <a href="home.html" target="tela" > <img src="estilos/home.png" alt="" srcset=""></a><br>
 <a href="face.html" target="tela" > <img src="estilos/facebook logo.jpg" alt="" srcset="" class="A1"></a><br>
